# function-calling-tools-python

./: README.md  agent_tool_manager.py  example.py  pyproject.toml  tool_registry.py
agent_tools/math_tools/: math_tools.py
test/: conftest.py  test_agent_tool_manager.py  test_tool_registry.py
