[project]
name = "function-call-tools"
version = "0.1.0"
description = "A lightweight Python library for managing OpenAI Function Calling tools with automatic registration and type-safe schemas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
